--- a/styles/style.css
+++ b/styles/style.css
@@ -16,8 +16,7 @@
   height: 500px;
   border-radius: 15px;
   background: #fff; }
-  .city-container .city-name {
-    font-size: 50px; }
+  .city-container .city-name,
   .city-container .temperature {
     font-size: 50px; }
   .city-container .del-btn {
@@ -28,3 +27,26 @@
     border-radius: 15px;
     color: #fff;
     font-size: 50px; }
+
+.city-to-choose {
+  margin: 50px;
+  width: 400px;
+  height: 500px;
+  border-radius: 15px;
+  background: #fff; }
+  .city-to-choose .city-name,
+  .city-to-choose .temperature {
+    font-size: 50px; }
+
+.city-choose {
+  position: absolute;
+  height: 0;
+  width: 0;
+  opacity: 0; }
+
+.city-choose__fade {
+  background: rgba(51, 51, 51, 0.5);
+  height: 100vh;
+  width: 100vw;
+  opacity: 1;
+  transition: all 0.6s; }
