--- a/styles/style.scss
+++ b/styles/style.scss
@@ -25,9 +25,7 @@ $font-size: 50px;
   height: 500px;
   border-radius: 15px;
   background: #fff;
-  .city-name {
-    font-size: $font-size;
-  }
+  .city-name,
   .temperature {
     font-size: $font-size;
   }
@@ -41,4 +39,30 @@ $font-size: 50px;
     color: #fff;
     font-size: 50px;
   }
+}
+
+.city-to-choose {
+  margin: 50px;
+  width: 400px;
+  height: 500px;
+  border-radius: 15px;
+  background: #fff;
+  .city-name,
+  .temperature {
+    font-size: $font-size;
+  }
+}
+.city-choose {
+  position: absolute;
+  height: 0;
+  width: 0;
+  opacity: 0;
+}
+
+.city-choose__fade {
+  background: rgba(51, 51, 51, 0.5);
+  height: 100vh;
+  width: 100vw;
+  opacity: 1;
+  transition: all 0.6s;
 }
