--- a/styles/style.css
+++ b/styles/style.css
@@ -42,7 +42,8 @@
   position: absolute;
   height: 0;
   width: 0;
-  opacity: 0; }
+  opacity: 0;
+  transition: all 0.6s; }
 
 .city-choose__fade {
   background: rgba(51, 51, 51, 0.5);
