code review, fix index bug

--- a/styles/style.css
+++ b/styles/style.css
@@ -35,7 +35,7 @@
   border-radius: 15px;
   background: #fff; }
   .city-to-choose .city-name,
-  .city-to-choose .temperature {
+  .city-to-choose .city-region {
     font-size: 50px; }
 
 .city-choose {
