--- a/styles/style.scss
+++ b/styles/style.scss
@@ -48,7 +48,7 @@ $font-size: 50px;
   border-radius: 15px;
   background: #fff;
   .city-name,
-  .temperature {
+  .city-region {
     font-size: $font-size;
   }
 }
