--- a/styles/style.scss
+++ b/styles/style.scss
@@ -29,7 +29,6 @@ $font-size: 50px;
   .temperature {
     font-size: $font-size;
   }
-
   .del-btn {
     background-color: rgba(253, 29, 29, 1);
     width: 150px;
@@ -41,6 +40,19 @@ $font-size: 50px;
   }
 }
 
+.city-input {
+  left: calc(50% - 250px);
+  top: 20px;
+  position: relative;
+  width: 500px;
+  height: 100px;
+  input {
+    width: 400px;
+  }
+  button {
+    border: none;
+  }
+}
 .city-to-choose {
   margin: 50px;
   width: 400px;
