--- a/styles/style.css
+++ b/styles/style.css
@@ -18,7 +18,7 @@
   background: #fff; }
   .city-container .city-name,
   .city-container .temperature {
-    font-size: 50px; }
+    font-size: 20px; }
   .city-container .del-btn {
     background-color: #fd1d1d;
     width: 150px;
@@ -35,19 +35,49 @@
   width: 500px;
   height: 100px; }
   .city-input input {
-    width: 400px; }
-  .city-input button {
-    border: none; }
+    text-align: center;
+    border-radius: 15px;
+    border: 0px;
+    display: block;
+    width: 400px;
+    height: 40px;
+    margin: 0 auto; }
+  .city-input .check-weather-btn {
+    transition: 0.3s;
+    position: relative;
+    background: #fff;
+    width: 200px;
+    height: 50px;
+    display: block;
+    margin: 20px auto;
+    border-radius: 15px;
+    box-shadow: 2px 5px rgba(0, 0, 0, 0.2); }
+    .city-input .check-weather-btn p {
+      font-size: 18px;
+      transition: 0.3s;
+      text-align: center;
+      line-height: 50px; }
+    .city-input .check-weather-btn:hover {
+      transform: translateX(2.5px);
+      transform: translateY(2.5px);
+      transition: 0.3s;
+      width: 195px;
+      height: 45px;
+      box-shadow: none; }
+      .city-input .check-weather-btn:hover p {
+        font-size: 17px;
+        transition: 0.3s;
+        line-height: 45px; }
 
 .city-to-choose {
   margin: 50px;
-  width: 400px;
-  height: 500px;
+  width: 200px;
+  height: 100px;
   border-radius: 15px;
   background: #fff; }
   .city-to-choose .city-name,
   .city-to-choose .city-region {
-    font-size: 50px; }
+    font-size: 20px; }
 
 .city-choose {
   position: absolute;
